title is not a quote, it's a hashtag

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://johan.org.uk/octopress/
-title: #sysadminsucks
+title: '#sysadminsucks'
 subtitle: If shit is worth doing, shit is hard
 author: Johan van den Dorpe
 simple_search: http://google.com/search
